[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Ethan <ethan@no-reply.com>"]

[dependencies]
rocket = "0.3.16"
rocket_codegen = "0.3.16"
diesel = { version = "<= 1.2", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"

r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]